Complete basic function.