@@ -1,12 +1,11 @@
 package org.cweili.drivingtest.service;
 
+import org.apache.commons.codec.binary.Base64;
 import org.cweili.drivingtest.domain.Image;
 import org.cweili.drivingtest.repository.ImageRespository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Scope;
 import org.springframework.stereotype.Service;
-
-import sun.misc.BASE64Encoder;
 
 @Service("imageService")
 @Scope("prototype")
@@ -18,7 +17,7 @@ public class ImageService {
 	public String getImage(String name) {
 		Image image = imageRespository.findOne(name);
 		if (null != image) {
-			return new BASE64Encoder().encode(image.getData());
+			return Base64.encodeBase64String(image.getData());
 		}
 		return "";
 	}
